# umsupport

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: config.py  main.py
app/models/: requests.py  responses.py
app/routers/: scraper.py
app/scraper/: browser.py  extractors.py  login.py  steps.py
app/services/: scraper_service.py
docs/: deployment.md
docs/plans/: 2026-05-13-scraper-api-design.md
scripts/: inspect_login.py  inspect_report_empleado_tarjeta.py  inspect_report_result.py  inspect_report_xhr.py  inspect_section.py  inspect_sidebar.py  test_login.py
scripts/_artifacts/: forms.json  page.html  page.url  post_login.html  post_login.url  rep_emp_tarjeta.html  rep_emp_tarjeta.url  rep_emp_tarjeta_summary.json  report_result.html  report_result_summary.json  reportes.html  reportes.url  reportes_summary.json  sidebar.json  xhr_response.json  xhr_response.txt
web/: README.md  package.json  pnpm-lock.yaml
web/src/components/: Chat.tsx
web/src/layouts/: Layout.astro
web/src/lib/: api.ts  parseInput.ts
web/src/pages/: index.astro
